Fix basic auth